# girl

./: AUTHORS  BROADCAST  ChangeLog  HACKING  LETTER  Makefile  Makefile.am  Makefile.in  NEWS  NEWS-0.5  NEWS-0.6  NEWS-0.7  NEWS-0.8  NEWS-0.9  NEWS-1.0  NEWS-1.1  NEWS-1.2  NEWS-1.4  README  THANKS  TODO  YP-DIRS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  girl.doap  girl.spec.in
data/: Makefile.am  Makefile.in  girl.appdata.xml.in  girl.desktop.in.in
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/22x22/: Makefile.in
data/icons/24x24/: Makefile.in
data/icons/256x256/: Makefile.in
data/icons/32x32/: Makefile.in
data/icons/48x48/: Makefile.in
data/pixmaps/: Makefile.in
debian/: Makefile.am  changelog  control  control.in  copyright  girl.1  girl.install  girl.manpages  girl.xpm  menu  rules  watch
debian/patches/: disable-yelp-rule.patch
help/: Makefile  Makefile.am  Makefile.in  aboutprogram.html  aboutstation.html  exit.html  girl.pot  index.html  intro.html  listen.html  next.html  prev.html  record.html  search.html
help/C/: aboutprogram.page  aboutstation.page  exit.page  index.html  index.page  intro.html  intro.page  listen.html  listen.page  next.html  next.page  prev.html  prev.page  record.html  record.page  search.html  search.page  stations.page
help/cs/: cs.po
help/en_US/: aboutprogram.page  aboutstation.page  exit.page  index.page  intro.page  legal.xml  listen.page  next.page  prev.page  record.page  search.page  stations.page
help/es/: es.po
man/: Makefile  Makefile.in  girl.1
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  de.po  el.po  es.po  hu.po  is.po  pl.po  pt.po  pt_BR.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po
src/: Makefile.am  Makefile.in  girl-0.7.dtd  girl-canvas.c  girl-canvas.h  girl-gui.c  girl-gui.h  girl-listener.c  girl-listener.h  girl-player-backend.c  girl-player-backend.h  girl-player-frontend.c  girl-player-frontend.h  girl-player.c  girl-player.h  girl-program.c  girl-program.h  girl-record-backend.c  girl-record-backend.h  girl-record-frontend.c  girl-record-frontend.h  girl-record.c  girl-record.h  girl-runners.c  girl-runners.h  girl-station.c  girl-station.h  girl-stations-map.c  girl-stations-map.h  girl-streams.c  girl-streams.h  girl-tz.c  girl-tz.h  girl.c  girl.h  girl.xml  listeners.xml  stations.xml
talk/: girl-osdc-2015.tex
